# manik

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260527_0001_create_booking_tables.py  20260527_0002_allow_rebooking_cancelled_slots.py
src/manik_bot/: __init__.py  __main__.py  cli.py
src/manik_bot/bot/: __init__.py  admin.py  app.py  client.py  handlers.py  keyboards.py  notifications.py  reminders.py
src/manik_bot/config/: __init__.py  settings.py
src/manik_bot/db/: __init__.py  base.py  models.py  session.py
src/manik_bot/utils/: __init__.py  logging.py
tests/: test_admin_helpers.py  test_client_helpers.py  test_keyboards.py  test_models.py  test_notifications.py  test_package.py  test_reminders.py  test_settings.py
