[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manik-bot"
version = "0.1.0"
description = "Telegram bot for manicure appointments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.6,<4.0",
    "alembic>=1.13,<2.0",
    "apscheduler>=3.10,<4.0",
    "asyncpg>=0.29,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "redis>=5.0,<6.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
]

[project.scripts]
manik-bot = "manik_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
manik_bot = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["manik_bot"]
